--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vscode
-easybeam/__pycache__
-easysections/__pycache__
-easybeam/.ipynb_checkpoints
+/.vscode
+/easybeam/__pycache__
+/easysections/__pycache__
+/easybeam/.ipynb_checkpoints
